Fixed spacing of textbox

--- a/Timer Page/style.css
+++ b/Timer Page/style.css
@@ -10,6 +10,7 @@
     background-color: transparent;
     margin-bottom: 3vw;
     border-style: hidden;
+    width: 100%
     
 }
 .defaultCountdown {
