--- a/Timer Page/style_e.css
+++ b/Timer Page/style_e.css
@@ -25,6 +25,7 @@ h1 {
     background-color: transparent;
     margin-bottom: 3vw;
     border-style: hidden;
+    width: 100%;
     
 }
 button {
